[package]
name = "libdrm_amdgpu_sys"
version = "0.7.7"
edition = "2021"
build = "build.rs"
license = "MIT"
authors = ["Umio Yasuno <coelacanth_dream@proton.me>"]
description = "libdrm_amdgpu bindings for Rust, and some methods ported from Mesa3D."
repository = "https://github.com/Umio-Yasuno/libdrm-amdgpu-sys-rs"
keywords = ["amdgpu", "libdrm"]
links = "drm, drm_amdgpu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "link-drm"]
std = []
buildtime_bindgen = ["bindgen", "pkg-config"]
link-drm = []
dynamic_loading = ["std", "libloading"]

[lib]
# name = "libdrm_amdgpu_sys"
path = "lib.rs"
doctest = false

[dependencies]
libc = { version = "0.2", default-features = false }
libloading = { version = "0.8", optional = true }

[build-dependencies]
bindgen = { version = "0.70", optional = true }
pkg-config = { version = "0.3", optional = true }

[[example]]
name = "amdgpu_info"
required-features = ["std"]

[[example]]
name = "vbios_dump"
required-features = ["std"]

[[example]]
name = "vbios_parser"
required-features = ["std"]

[[example]]
name = "gpu_metrics"
required-features = ["std"]

[[example]]
name = "stable_pstate"
required-features = ["std"]

[[example]]
name = "pp_table"
required-features = ["std"]

[[example]]
name = "dynamic_link"
required-features = ["std", "dynamic_loading"]
